# renewIQ

./: .env.example  .gitignore  JD.txt  README.md  build-plan.md  databricks.yml  docker-compose.yml  pyproject.toml  renewiq-system-design-v2.md  renewiq-system-design.md
.github/workflows/: cd.yml  ci.yml
data/bronze_seed/entso_generation/: 2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  (+50 more)
data/bronze_seed/epex/: 2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  (+50 more)
data/bronze_seed/gopacs/: 2026-06-21.json
databricks/notebooks/: 01_setup_unity_catalog.py  02_setup_vector_search.py  04_deploy_agent.py  05_evaluate_agent.py
databricks/pipelines/: bronze_ingestion.py  gold_features.py  silver_transforms.py
docker/api/: Dockerfile
docker/mock/: Dockerfile
docs/: data-dictionary.md
docs/adr/: ADR-001-medallion-architecture.md  ADR-002-langgraph-orchestration.md  ADR-003-vector-search-strategy.md  ADR-004-deterministic-risk-scoring.md  ADR-005-flashrank-reranker.md  ADR-006-redis-cache-strategy.md
infra/helm/renewiq-api/: Chart.yaml  values.yaml
infra/helm/renewiq-api/templates/: deployment.yaml  hpa.yaml  service.yaml
notebooks/: 01_epex_eda.ipynb  02_contract_clause_analysis.ipynb  03_risk_exposure_calc.ipynb  04_rag_retrieval_eval.ipynb
scripts/: generate_synthetic_ppas.py  ingest_contracts.py  seed_market_data.py
src/agents/contract_rag/: agent.py  reranker.py  retriever.py
src/agents/market_data/: agent.py
src/agents/orchestrator/: graph.py  llm.py  state.py
src/agents/report_writer/: agent.py
src/agents/risk_scoring/: agent.py
src/api/: config.py  main.py
src/api/middleware/: cache.py
src/api/routes/: __init__.py  chat.py  contracts.py  reports.py
src/ingestion/: clause_tagger.py  entso_fetcher.py  epex_fetcher.py  gopacs_fetcher.py  pdf_parser.py
tests/evaluation/: agent_eval_dataset.json  ragas_eval.py
tests/unit/: test_agents.py  test_api_health.py  test_clause_tagger.py  test_fetchers.py  test_pdf_parser.py
