[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renewiq"
version = "0.1.0"
description = "Renewable Energy PPA Intelligence Copilot — multi-agent LLM system on Azure Databricks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.3.0,<0.4",
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-ollama>=0.2.0",
    "databricks-langchain>=0.3.0",
    "databricks-sdk>=0.28.0",
    "mlflow>=2.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "pymupdf>=1.24.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "fpdf2>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

databricks = [
    "databricks-sdk>=0.28.0",
    "databricks-langchain>=0.3.0",
    "mlflow>=2.14.0",
    "pyspark>=3.5.0",
    "delta-spark>=3.2.0",
    "databricks-vectorsearch>=0.40",
    "entsoe-py>=0.6.0",
]

eval = [
    "ragas>=0.1.15",
    "datasets>=2.20.0",
]

dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["databricks/", "notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: fast, no external dependencies",
    "integration: requires Databricks or Ollama",
    "e2e: full end-to-end requires all services",
]
